@@ -47,6 +47,7 @@ import(IRanges)
 import(S4Vectors)
 importFrom(AnnotationDbi,get)
 importFrom(AnnotationDbi,select)
+importFrom(BiocGenerics,unstrand)
 importFrom(GenomicFeatures,exonsBy)
 importFrom(GenomicFeatures,fiveUTRsByTranscript)
 importFrom(GenomicFeatures,genes)
@@ -54,6 +55,7 @@ importFrom(GenomicFeatures,intronsByTranscript)
 importFrom(GenomicFeatures,threeUTRsByTranscript)
 importFrom(GenomicFeatures,transcripts)
 importFrom(GenomicFeatures,transcriptsBy)
+importFrom(IRanges,resize)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(TxDb.Hsapiens.UCSC.hg19.knownGene,TxDb.Hsapiens.UCSC.hg19.knownGene)
 importFrom(UpSetR,upset)
