@@ -4,12 +4,21 @@
 \alias{getNearestFeatureIndicesAndDistances}
 \title{getNearestFeatureIndicesAndDistances}
 \usage{
-getNearestFeatureIndicesAndDistances(peaks, features)
+getNearestFeatureIndicesAndDistances(peaks, features, sameStrand = FALSE,
+  ignoreOverlap = FALSE, ignoreUpstream = FALSE, ignoreDownstream = FALSE)
 }
 \arguments{
 \item{peaks}{peak in GRanges}
 
 \item{features}{features in GRanges}
+
+\item{sameStrand}{logical, whether find nearest gene in the same strand}
+
+\item{ignoreOverlap}{logical, whether ignore overlap of TSS with peak}
+
+\item{ignoreUpstream}{logical, if True only annotate gene in downstream of peak.}
+
+\item{ignoreDownstream}{logical, if True only annotate gene in upstream of peak.}
 }
 \value{
 list
